[package]
name = "nut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
language-tags = "0.3"
mime = "0.3"
log = "0.4"
yaml-rust = "0.4"
actix-multipart = "0.6"
rand = "0.8"
xml-rs = "0.8"
zmq = "0.10"
prost = "0.11"
prost-types = "0.11"
askama = "0.12"
nix = "0.26"
serde_json = "1"
data-encoding = "2"
flexbuffers = "2"
lapin = "2"
percent-encoding = "2"
tempfile = "3"
handlebars = "4"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.sqlx-adapter]
version = "0.4"
features = ["postgres"]

[dependencies.actix-session]
version = "0.7"
features = ["cookie-session", "redis-rs-session"]

[dependencies.chrono-tz]
version = "0.8"
features = ["serde"]

[dependencies.tonic]
version = "0.8"
features = ["transport"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.validator]
version = "0.16"
features = ["derive", "phone", "card", "unic"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.casbin]
version = "2"
features = ["watcher", "cached"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["bigdecimal", "postgres", "mysql", "sqlite", "extras", "128-column-tables"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.openssl]
version = "*"
features = ["vendored"]

[dependencies.palm]
path = '../palm'

