[package]
name = "orchid"
version = "2022.12.28"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
toml = "0.5"
env_logger = "0.10"
prost = "0.11"
prost-types = "0.11"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.tonic]
version = "0.8"
features = ["transport"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "cookies"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.validator]
version = "0.16"
features = ["derive", "phone", "card", "unic"]

[dependencies.redis]
version = "0.22"
features = ["tokio-comp", "r2d2", "cluster", "connection-manager"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.palm]
path = '../palm'
