[package]
name = "orchid"
version = "2023.6.23"
edition = "2021"
description = "WeChat mini-program services."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
toml = "0.7"
env_logger = "0.10"
prost = "0.11"
prost-types = "0.11"
serde_json = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.tonic]
version = "0.9"
features = ["transport"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "cookies"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.validator]
version = "0.16"
features = ["derive", "phone", "card", "unic"]

[dependencies.redis]
version = "0.23"
features = ["tokio-comp", "r2d2", "cluster", "connection-manager"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.palm]
path = '../palm'
