[package]
name = "palm"
version = "2023.12.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
prost-types = "0.12"
lazy_static = "1"

[dependencies.tonic]
version = "0.10"
features = ["transport"]

[build-dependencies]
tonic-build = "0.10"
