[package]
name = "palm"
version = "2023.12.10"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A total free education & translation & ops solution."
homepage = "https://github.com/saturn-xiv/palm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
noise-protocol = "0.2"
futures = "0.3"
futures-util = "0.3"
mime = "0.3"
language-tags = "0.3"
rabbitmq-stream-client = "0.4"
bigdecimal = "0.4"
log = "0.4"
num-complex = "0.4"
sitemap = "0.4"
yaml-rust = "0.4"
serde-xml-rs = "0.6"
encoding_rs = "0.8"
r2d2 = "0.8"
toml = "0.8"
xml-rs = "0.8"
rusttype = "0.9"
#ssh2 = "0.9"
zmq = "0.10"
Inflector = "0.11"
lettre = "0.11"
askama = "0.12"
paho-mqtt = "0.12"
prost = "0.12"
prost-types = "0.12"
thrift = "0.17"
git2 = "0.18"
ipnetwork = "0.20"
imageproc = "0.23"
image = "0.24"
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
aws-config = "1"
aws-credential-types = "1"
async-mutex = "1"
bytes = "1"
bytesize = "1"
byteorder = "1"
lazy_static = "1"
regex = "1"
rmp-serde = "1"
serde_json = "1"
data-encoding = "2"
flexbuffers = "2"
humantime = "2"
lapin = "2"
opensearch = "2"
percent-encoding = "2"
tempfile = "3"
handlebars = "4"
dirs = "5"
google-youtube3 = "5"
amq-protocol-uri = "7"
jsonwebtoken = "9"
flatbuffers = "23"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]


[dependencies.chrono-tz]
version = "0.8"
features = ["serde"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.tonic]
version = "0.10"
features = ["transport"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "cookies"]

[dependencies.validator]
version = "0.16"
features = ["derive", "phone", "card", "unic"]

[dependencies.cookie]
version = "0.18"
features = ["secure", "private", "percent-encode"]

[dependencies.redis]
version = "0.24"
features = ["tokio-comp", "r2d2", "cluster", "connection-manager"]

[dependencies.nix]
version = "0.27"
features = ["user", "process"]

[dependencies.eui48]
version = "1"
default-features = false
features = ["disp_hexstring", "serde_bytes"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.casbin]
version = "2"
features = ["watcher", "cached"]

[dependencies.ipnet]
version = "2"
features = ["serde"]

[dependencies.rss]
version = "2"
features = ["validation"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.openssl]
version = "*"
features = ["vendored"]

[build-dependencies]
tonic-build = "0.10"
